--- a/homekit.yaml
+++ b/homekit.yaml
@@ -19,14 +19,13 @@ filter:
     - light.office_stairs
 
     # Climate
-    - climate.keuken
-    - climate.woonkamer
-    - climate.badkamer
-    - climate.slaapkamer
-    - climate.kantoor
-    - climate.gastenkamer
-    - climate.berging
-    - water_heater.warm_water
+    - climate.kitchen
+    - climate.living
+    - climate.bathroom
+    - climate.bedroom
+    - climate.office
+    - climate.guestroom
+    - climate.storage
 
     # Booleans
     - input_boolean.mailbox_mail
@@ -36,9 +35,6 @@ filter:
     - switch.bathroom_fan
     - switch.litterbox_needs_cleaning
 
-    # Media players
-    - media_player.living_tv
-
     # Vacuums
     - vacuum.portia
 
@@ -46,5 +42,4 @@ filter:
     - script.clean_around_litterbox
     - script.clean_kitchen_aisle
     - script.downstairs_cosy
-    - script.downstairs_music
     - script.turn_everything_off
