--- a/automations/sensors/bathroom.yaml
+++ b/automations/sensors/bathroom.yaml
@@ -10,8 +10,8 @@
     entity_id: input_boolean.do_not_disturb
     state: 'off'
   - condition: state
-    entity_id: input_boolean.bathroom_manual_override
-    state: 'off'
+    entity_id: input_boolean.bathroom_motion_on
+    state: 'on'
   action:
   - service: scene.turn_on
     entity_id: scene.bathroom_bright
@@ -28,8 +28,8 @@
     entity_id: input_boolean.do_not_disturb
     state: 'on'
   - condition: state
-    entity_id: input_boolean.bathroom_manual_override
-    state: 'off'
+    entity_id: input_boolean.bathroom_motion_on
+    state: 'on'
   action:
   - service: scene.turn_on
     entity_id: scene.bathroom_dim
@@ -43,8 +43,8 @@
       minutes: "{{ states('input_number.light_timeout_bathroom')|int }}"
   condition:
   - condition: state
-    entity_id: input_boolean.bathroom_manual_override
-    state: 'off'
+    entity_id: input_boolean.bathroom_motion_on
+    state: 'on'
   action:
   - service: light.turn_off
     entity_id: light.bathroom
