--- a/automations/switches/bathroom_niko.yaml
+++ b/automations/switches/bathroom_niko.yaml
@@ -17,8 +17,8 @@
       id: bathroom_niko
       event: 2000
   action:
-    - service: input_boolean.turn_on
-      entity_id: input_boolean.bathroom_manual_override
+    - service: input_boolean.turn_off
+      entity_id: input_boolean.bathroom_motion_on
     - service: light.turn_on
       entity_id: light.bathroom
       data_template:
@@ -37,8 +37,8 @@
   action:
     - service: scene.turn_on
       entity_id: scene.bathroom_bright
-    - service: input_boolean.turn_off
-      entity_id: input_boolean.bathroom_manual_override
+    - service: input_boolean.turn_on
+      entity_id: input_boolean.bathroom_motion_on
     
 - alias: Turn Off Bathroom Light
   trigger:
@@ -50,5 +50,5 @@
   action:
     - service: light.turn_off
       entity_id: light.bathroom
-    - service: input_boolean.turn_off
-      entity_id: input_boolean.bathroom_manual_override
+    - service: input_boolean.turn_on
+      entity_id: input_boolean.bathroom_motion_on
