--- a/automations/presence.yaml
+++ b/automations/presence.yaml
@@ -3,21 +3,8 @@
   - platform: state
     entity_id: group.persons_all
     to: "not_home"
-    for: "00:10:00"
   action:
-  - service: climate.set_preset_mode
-    data:
-      entity_id: climate.living
-      preset_mode: 'away'
-
-- alias: Someone is Home
-  trigger:
-  - platform: state
-    entity_id: group.persons_all
-    to: "home"
-    for: "00:00:00"
-  action:
-  - service: climate.set_preset_mode
-    data:
-      entity_id: climate.living
-      preset_mode: 'home'
+  - service: light.turn_off
+    entity_id: light.bedroom
+  - service: light.turn_off
+    entity_id: light.office
