--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,7 @@
 default_config:
 frontend: !include frontend.yaml
 recorder: !include recorder.yaml
-automation: !include_dir_merge_list automations/
+automation: !include automations.yaml
 scene: !include scenes.yaml
 script: !include scripts.yaml
 group: !include groups.yaml
