--- a/automations.yaml
+++ b/automations.yaml
@@ -148,7 +148,7 @@
   - condition: state
     entity_id: input_boolean.kitchen_motion_on
     state: 'on'
-  - condition:
+  - condition: state
     entity_id: binary_sensor.anyone_present_kitchen
     state: 'off'
   action:
@@ -172,7 +172,7 @@
   - condition: state
     entity_id: input_boolean.kitchen_motion_on
     state: 'on'
-  - condition:
+  - condition: state
     entity_id: binary_sensor.anyone_present_kitchen
     state: 'off'
   action:
