--- a/automations.yaml
+++ b/automations.yaml
@@ -48,6 +48,9 @@
   - condition: state
     entity_id: input_boolean.bathroom_motion_on
     state: 'on'
+  - condition: state
+    entity_id: binary_sensor.anyone_present_bathroom
+    state: 'off'
   action:
   - service: light.turn_off
     entity_id: light.bathroom
