--- a/scenes.yaml
+++ b/scenes.yaml
@@ -519,12 +519,10 @@
     light.living_spot_1:
       min_mireds: 140
       max_mireds: 650
-      brightness: 128
-      color_temp: 454
       is_deconz_group: false
       friendly_name: living_spot_1
       supported_features: 43
-      state: 'on'
+      state: 'off'
     light.living_spot_2:
       min_mireds: 140
       max_mireds: 650
@@ -546,3 +544,40 @@
       friendly_name: living_wall_2
       supported_features: 41
       state: 'on'
+- id: '1610993554792'
+  name: living_standby
+  entities:
+    light.living_spot_1:
+      min_mireds: 140
+      max_mireds: 650
+      is_deconz_group: false
+      friendly_name: living_spot_1
+      supported_features: 43
+      state: 'off'
+    light.living_spot_2:
+      min_mireds: 140
+      max_mireds: 650
+      is_deconz_group: false
+      friendly_name: living_spot_2
+      supported_features: 43
+      state: 'off'
+    light.living_floor:
+      min_mireds: 153
+      max_mireds: 454
+      brightness: 128
+      color_temp: 454
+      is_deconz_group: false
+      friendly_name: Staanlamp
+      icon: mdi:floor-lamp
+      supported_features: 43
+      state: 'on'
+    light.living_wall_1:
+      is_deconz_group: false
+      friendly_name: living_wall_1
+      supported_features: 41
+      state: 'off'
+    light.living_wall_2:
+      is_deconz_group: false
+      friendly_name: living_wall_2
+      supported_features: 41
+      state: 'off'
