--- a/scenes.yaml
+++ b/scenes.yaml
@@ -438,12 +438,10 @@
     light.living_spot_1:
       min_mireds: 140
       max_mireds: 650
-      brightness: 128
-      color_temp: 454
       is_deconz_group: false
       friendly_name: living_spot_1
       supported_features: 43
-      state: 'on'
+      state: 'off'
     light.living_spot_2:
       min_mireds: 140
       max_mireds: 650
@@ -567,3 +565,67 @@
       friendly_name: living_wall_2
       supported_features: 41
       state: 'off'
+- id: '1611777115599'
+  name: alarm
+  entities:
+    light.living_spot_1:
+      min_mireds: 140
+      max_mireds: 650
+      brightness: 254
+      color_temp: 153
+      is_deconz_group: false
+      friendly_name: living_spot_1
+      supported_features: 43
+      state: 'on'
+    light.living_spot_2:
+      min_mireds: 140
+      max_mireds: 650
+      brightness: 254
+      color_temp: 153
+      is_deconz_group: false
+      friendly_name: living_spot_2
+      supported_features: 43
+      state: 'on'
+    light.living_floor:
+      min_mireds: 153
+      max_mireds: 454
+      is_deconz_group: false
+      friendly_name: Staanlamp
+      icon: mdi:floor-lamp
+      supported_features: 43
+      state: 'off'
+    light.living_wall_1:
+      is_deconz_group: false
+      friendly_name: living_wall_1
+      supported_features: 41
+      state: 'off'
+    light.living_wall_2:
+      is_deconz_group: false
+      friendly_name: living_wall_2
+      supported_features: 41
+      state: 'off'
+    light.dining:
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - colorloop
+      brightness: 254
+      color_temp: 153
+      is_deconz_group: true
+      all_on: true
+      friendly_name: Tafel
+      supported_features: 47
+      state: 'on'
+    light.kitchen:
+      min_mireds: 153
+      max_mireds: 500
+      effect_list:
+      - colorloop
+      brightness: 254
+      color_temp: 153
+      is_deconz_group: true
+      all_on: true
+      friendly_name: Eiland
+      supported_features: 47
+      state: 'on'
+  icon: mdi:security
