--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,3 +13,4 @@ binary_sensor: !include binary_sensors.yaml
 tts: !include tts.yaml
 asuswrt: !include asuswrt.yaml
 homekit: !include homekit.yaml
+camera: !include cameras.yaml
